# backend-go/internal/adapter/in/web/handler/snippet_handler.go
@@ -1,0 +1,171 @@
+package handler
+
+import (
+	"devaulty-backend/internal/adapter/in/web/common"
+	"devaulty-backend/internal/usecase"
+	"errors"
+	"fmt"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+)
+
+type SnippetHandler struct {
+	snippetUseCase *usecase.SnippetUseCase
+}
+
+func NewSnippetHandler(snippetUseCase *usecase.SnippetUseCase) *SnippetHandler {
+	return &SnippetHandler{snippetUseCase: snippetUseCase}
+}
+
+func (h *SnippetHandler) Create(c *gin.Context) {
+	var cmd usecase.CreateSnippetCommand
+	err := c.ShouldBindJSON(&cmd)
+	if err != nil {
+		c.JSON(400, gin.H{"error": err.Error()})
+		return
+	}
+	projectID, err := common.ExtractUUIDParam(c, "project_id")
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	cmd.ProjectID = projectID
+
+	snippet, err := h.snippetUseCase.Create(c.Request.Context(), cmd)
+	if err != nil {
+		if errors.Is(err, usecase.ErrProjectNotFound) {
+			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+			return
+		}
+		c.JSON(400, gin.H{"error": err.Error()})
+		return
+	}
+	location := fmt.Sprintf("%s/%s", c.Request.URL.Path, snippet.ID)
+	c.Header("Location", location)
+	c.JSON(http.StatusCreated, snippet)
+}
+
+func (h *SnippetHandler) GetAll(c *gin.Context) {
+	var query common.PaginationQuery
+	if err := c.ShouldBindQuery(&query); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	projectID, err := common.ExtractUUIDParam(c, "project_id")
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	pagedSnippets, err := h.snippetUseCase.GetAllByProjectID(c.Request.Context(), projectID, query.PageNumber, query.PageSize)
+	if err != nil {
+		if errors.Is(err, usecase.ErrProjectNotFound) {
+			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+			return
+		}
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, pagedSnippets)
+}
+
+func (h *SnippetHandler) Get(c *gin.Context) {
+	projectID, err := common.ExtractUUIDParam(c, "project_id")
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	id, err := common.ExtractUUIDParam(c, "snippet_id")
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	snippet, err := h.snippetUseCase.GetByID(c.Request.Context(), projectID, id)
+	if err != nil {
+		if errors.Is(err, usecase.ErrSnippetNotFound) || errors.Is(err, usecase.ErrProjectNotFound) {
+			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+			return
+		}
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	if snippet == nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "Snippet not found"})
+		return
+	}
+
+	c.JSON(http.StatusOK, snippet)
+}
+
+func (h *SnippetHandler) Update(c *gin.Context) {
+	projectID, err := common.ExtractUUIDParam(c, "project_id")
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	id, err := common.ExtractUUIDParam(c, "snippet_id")
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	var cmd usecase.UpdateSnippetCommand
+	err = c.ShouldBindJSON(&cmd)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+	cmd.ID = id
+	cmd.ProjectID = projectID
+
+	snippet, err := h.snippetUseCase.Update(c.Request.Context(), cmd)
+	if err != nil {
+		if errors.Is(err, usecase.ErrProjectNotFound) {
+			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+			return
+		}
+		if errors.Is(err, usecase.ErrSnippetNotFound) {
+			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+			return
+		}
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, snippet)
+}
+
+func (h *SnippetHandler) Delete(c *gin.Context) {
+	projectID, err := common.ExtractUUIDParam(c, "project_id")
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	id, err := common.ExtractUUIDParam(c, "snippet_id")
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	err = h.snippetUseCase.Delete(c.Request.Context(), projectID, id)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.Status(http.StatusNoContent)
+}
